# coopfs

./: .travis.yml  README.md  meson.build
src/: coopfs.h  gsl.h  keyvalue.cpp
test/: catch_main.cpp  keyvalue.cpp  trivial.cpp
